fix for clipping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,4 +165,6 @@ header h1 {
 }
 #dataoriginaluri a {
 	text-overflow: ellipsis;
+	overflow: hidden;
+	display: block;
 }
